fix content spacing

--- a/static/styles/base.less
+++ b/static/styles/base.less
@@ -137,8 +137,10 @@ ul {
 .jumbotron-info {
   padding: 40px;
 }
+
 .background-mask {
   background-color: @light-background;
+  padding-bottom: 50px;
 }
 
 .secondary-info {
@@ -384,6 +386,7 @@ ul {
   background-color: @dark-background;
   overflow: auto;
   color: @dark-text;
+  margin-top: 80px;
 }
 .footer a {
   color: #fff;
